# Clean-Slate

./: .gitignore  README.md  TODO.txt  The Clean Slate Learning Engine.txt
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: BrowserProcessor.jsx
frontend/src/pages/: Dashboard.jsx  FocusMode.jsx  Settings.jsx  Setup.jsx  Upload.jsx
frontend/src/services/: api.js  llm.js  sounds.js  theme.js  webllm.js
frontend/src/styles/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
